--- a/Prisoners-Dilemma/Prisoners-Dilemma.tex
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.tex
@@ -272,6 +272,10 @@ be able to see. Lets compare and rate each source for its usefulness. I
 still need to look over them and to select which one to incoporate in
 the coding and essay.
 
+This first paper is basically what we are trying to do (recreate)
+Axelrod (\citeproc{ref-axelrod1980effective}{1980}). How can we improve
+on it? New strategies maybe?
+
 Lange \& Baylor (\citeproc{ref-lange2007teaching}{2007}), Farrell \&
 Ware (\citeproc{ref-farrell1988evolutionary}{1989}), Kreps, Milgrom,
 Roberts \& Wilson (\citeproc{ref-kreps1982rational}{1982}), Romero \&
@@ -282,10 +286,59 @@ Squillero \& Tonda (\citeproc{ref-gaudesi2016exploiting}{2016}), García
 \& Veelen (\citeproc{ref-garcia2018no}{2018}), Embrey, Fréchette \&
 Yuksel (\citeproc{ref-embrey2017cooperation}{2018}),
 
+I guess when we also need to provide good notation and formatting for
+the strategies we end up doing, lets be the neatest and the easiest to
+understand.
+
+I am also thinking on how the changing of the payoffs might change the
+outcomes of our results, so to have two sections with different payoffs
+might be beneficial.
+
 \section{\texorpdfstring{Literature
 Review\label{litreview}}{Literature Review}}\label{literature-review}
 
 \section{Game Construction}\label{game-construction}
+
+Ideally have a round robin type of tournament, the number of rounds
+played still needs to be decided but one of the paper's i saw had 25
+rounds. We need to also define how we aim to evaluate games and
+strategies - typically we go by overall utility rather than amount of
+games won. This is a utilitarian approach in the philosophical ethics
+systems of the word.
+
+Basing the results on utilitarian principles of maximum welfare makes us
+really have to consider the pay-off values for our prisoners dilemma
+game, possibly could play around with different values, as well as
+include two payoff values in our results. (we need to consider how much
+better is mutual cooperation than mutual defection).
+
+More importantly we need to select which strategies to include, ideally
+have the basic ones in there, and then create a few interesting ones
+which we can explain and add more depth to the paper with the complex
+ones:
+
+Basic Strategies: Always Cooperate: This strategy always cooperates,
+regardless of the opponent's previous moves. Always Defect: This
+strategy always defects, regardless of the opponent's previous moves.
+Tit-for-Tat (TFT): Cooperates on the first move, then mimics the
+opponent's last move in subsequent rounds. Grim Trigger: Cooperates
+until the opponent defects once, then defects forever. Random: Randomly
+chooses to cooperate or defect with some probability. Tit-for-Two-Tats:
+Similar to Tit-for-Tat but defects only after two consecutive defections
+by the available player. Pavlov (Win-Stay, Lose-Shift): Cooperates if
+the last round was a success (mutual cooperation or mutual defection),
+otherwise defects.
+
+More Complex Strategies: Generous Tit-for-Tat: Similar to Tit-for-Tat,
+but occasionally forgives a defection. Tit-for-Tat with Randomization: A
+variant of Tit-for-Tat where the player may defect or cooperate with a
+certain probability after the opponent defects. Tit-for-Tat with
+Forgiveness: Like TFT but occasionally forgives a defection, returning
+to cooperation.
+
+Of course there are more strategies that can deal with memory length and
+what not, and maybe change startegies based on the past behaviour of the
+opponent.
 
 \begin{verbatim}
 ##            Player 2
@@ -303,6 +356,11 @@ Review\label{litreview}}{Literature Review}}\label{literature-review}
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{1}
+\bibitem[\citeproctext]{ref-axelrod1980effective}
+Axelrod, R. 1980. Effective choice in the prisoner's dilemma. \emph{The
+Journal of Conflict Resolution}. 24(1):3--25. {[}Online{]}, Available:
+\url{http://www.jstor.org/stable/173932}.
+
 \bibitem[\citeproctext]{ref-dalbo2019strategy}
 Bó, P.D. \& Fréchette, G.R. 2019.
 \href{https://doi.org/10.1257/aer.20181480}{Strategy choice in the
