--- a/Prisoners-Dilemma/Tex/ref.bib
+++ b/Prisoners-Dilemma/Tex/ref.bib
@@ -105,3 +105,14 @@
   note = {Advance Access publication on August 26, 2017}
 }
 
+@article{axelrod1980effective,
+  author = {Robert Axelrod},
+  title = {Effective Choice in the Prisoner's Dilemma},
+  journal = {The Journal of Conflict Resolution},
+  volume = {24},
+  number = {1},
+  pages = {3--25},
+  year = {1980},
+  publisher = {Sage Publications, Inc.},
+  url = {http://www.jstor.org/stable/173932}
+}
