--- a/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
+++ b/Prisoners-Dilemma/Prisoners-Dilemma.Rmd
@@ -151,18 +151,28 @@ Basing the results on utilitarian principles of maximum welfare makes us really 
 More importantly we need to select which strategies to include, ideally have the basic ones in there, and then create a few interesting ones which we can explain and add more depth to the paper with the complex ones:
 
 Basic Strategies:
-Always Cooperate: This strategy always cooperates, regardless of the opponent's previous moves.
-Always Defect: This strategy always defects, regardless of the opponent's previous moves.
-Tit-for-Tat (TFT): Cooperates on the first move, then mimics the opponent's last move in subsequent rounds.
-Grim Trigger: Cooperates until the opponent defects once, then defects forever.
-Random: Randomly chooses to cooperate or defect with some probability.
-Tit-for-Two-Tats: Similar to Tit-for-Tat but defects only after two consecutive defections by the available player.
-Pavlov (Win-Stay, Lose-Shift): Cooperates if the last round was a success (mutual cooperation or mutual defection), otherwise defects.
+
+- Always Cooperate: This strategy always cooperates, regardless of the opponent's previous moves.
+
+- Always Defect: This strategy always defects, regardless of the opponent's previous moves.
+
+- Tit-for-Tat (TFT): Cooperates on the first move, then mimics the opponent's last move in subsequent rounds.
+
+- Grim Trigger: Cooperates until the opponent defects once, then defects forever.
+
+- Random: Randomly chooses to cooperate or defect with some probability.
+
+- Tit-for-Two-Tats: Similar to Tit-for-Tat but defects only after two consecutive defections by the available player.
+
+- Pavlov (Win-Stay, Lose-Shift): Cooperates if the last round was a success (mutual cooperation or mutual defection), otherwise defects.
 
 More Complex Strategies:
-Generous Tit-for-Tat: Similar to Tit-for-Tat, but occasionally forgives a defection.
-Tit-for-Tat with Randomization: A variant of Tit-for-Tat where the player may defect or cooperate with a certain probability after the opponent defects.
-Tit-for-Tat with Forgiveness: Like TFT but occasionally forgives a defection, returning to cooperation.
+
+- Generous Tit-for-Tat: Similar to Tit-for-Tat, but occasionally forgives a defection.
+
+- Tit-for-Tat with Randomization: A variant of Tit-for-Tat where the player may defect or cooperate with a certain probability after the opponent defects.
+
+- Tit-for-Tat with Forgiveness: Like TFT but occasionally forgives a defection, returning to cooperation.
 
 Of course there are more strategies that can deal with memory length and what not, and maybe change startegies based on the past behaviour of the opponent. 
 
